# GameEngine_Practice

./: CMakeLists.txt  README.md  build_linux.sh  build_windows.bat
src/: CMakeLists.txt  MySystem.h  main.cpp
src/GameObject/: Light.cpp  Light.h  Quality.h
src/GameObject/Physics/: Quality.cpp
src/Math/: Vector3.cpp  Vector3.h
src/Platform/: MySystem.cpp
